# octocus

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  DamageSystem.cpp  DamageSystem.h  LifeComponents.h  README.md  SpaceComponents.h  WaveSpawner.cpp  WaveSpawner.h  build.bat  build.sh  build_server.sh  game.cpp  game.h  main.cpp  target_files.cmake  vcpkg.json
components/: AiComponents.h  Animation.h  BorderComponent.h  LifeComponents.h  RenderComponent.h  ReplicationId.h  SpaceComponents.h  StatusComponents.h  WeaponComponent.h
networking/: ByteSwapper.h  Connection.h  GameClient.h  GameServer.cpp  GameServer.h  PlayerRegistry.cpp  PlayerRegistry.h  Replication.h  Serialization.cpp  Serialization.h  Server.cpp  Server.h
systems/: AiSystem.cpp  AiSystem.h  AnimationSystem.cpp  AnimationSystem.h  AttackSystem.cpp  AttackSystem.h  CollisionSystem.cpp  CollisionSystem.h  DamageSystem.cpp  DamageSystem.h  DrawSystem.cpp  DrawSystem.h  InputSystem.cpp  InputSystem.h  KillSystem.cpp  KillSystem.h  MovementSystem.cpp  MovementSystem.h
